# 8bit-adder

./: .gitignore  core.html  core.html.md  index.html  index.html.md  pixi.toml  pyproject.toml  robots.txt  search.json  settings.ini  sitemap.xml
8bit_adder/: _modidx.py  core.py  rpi_server.py  simulator.py
nbs/: 00_core.ipynb  01_simulator.ipynb  02_debug.ipynb  index.ipynb  nbdev.yml
